# cisv-core

./: CONTRIBUTING.md  README.md
.github/workflows/: benchmark.yml  ci.yml  release.yml  safety.yml
core/: CMakeLists.txt  Makefile
core/include/cisv/: operations.h  parser.h  simd.h  transformer.h
core/src/: operations.c  parser.c  transformer.c  writer.c
core/tests/: bench_core.c  test_core.c
examples/: README.md  basic_parse.c  iterator_example.c
